Fixed hamburger menu z-index

--- a/src/components/header/HamburgerMenu.module.css
+++ b/src/components/header/HamburgerMenu.module.css
@@ -20,6 +20,7 @@
   list-style: none;
   display: flex;
   align-items: center;
+  z-index: 99999;
 }
 .hamburgerMenu {
   width: 100%;
